name:                haxl-ajax
version:             0.1.0.0
synopsis:            Crossbrowser AJAX Bindings for Haxl + GHCJS
description:         Please see README.md
homepage:            https://github.com/agrafix/ghcjs-ajax#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2016 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JavaScript.Ajax.DataSource
  ghc-options:         -Wall
  build-depends:       base
                     , text
                     , haxl
                     , ghcjs-ajax
                     , hashable
                     , async
  default-language:    Haskell2010
  if impl(ghcjs)
      build-depends:   ghcjs-base

source-repository head
  type:     git
  location: https://github.com/agrafix/ghcjs-ajax
